// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-login renders 1`] = `
<sc-customer-login>
  <div class="customer-login-area">
    <sc-customer-email-preview></sc-customer-email-preview>
    <sc-divider></sc-divider>
    <div>
      <p class="code-hint">
        Enter the code sent to
        <span class="reset-email-preview"></span>
        to securely use your saved information.
      </p>
      <div>
        <div class="reset-code-area">
          <sc-verification-code total="6"></sc-verification-code>
          <div class="matched-icon"></div>
        </div>
      </div>
      <div class="resend-code-button">
        <sc-button type="text" style="color: var(--sc-color-primary-500);">
          Resend Code
        </sc-button>
      </div>
    </div>
    <div class="change-mode">
      <a href="#">
        Use Password
        <sc-icon name="lock"></sc-icon>
      </a>
    </div>
  </div>
</sc-customer-login>
`;

exports[`sc-customer-login renders with user logged in and matched 1`] = `
<sc-customer-login>
  <div class="customer-login-area">
    <sc-customer-email-preview></sc-customer-email-preview>
    <sc-divider></sc-divider>
    <div>
      <p class="code-hint">
        Enter the code sent to
        <span class="reset-email-preview">
          test@example.com
        </span>
        to securely use your saved information.
      </p>
      <div>
        <div class="reset-code-area">
          <sc-verification-code total="6"></sc-verification-code>
          <div class="matched-icon"></div>
        </div>
      </div>
      <div class="resend-code-button">
        <sc-button type="text" style="color: var(--sc-color-primary-500);">
          Resend Code
        </sc-button>
      </div>
    </div>
    <div class="change-mode">
      <a href="#">
        Use Password
        <sc-icon name="lock"></sc-icon>
      </a>
    </div>
  </div>
</sc-customer-login>
`;

exports[`sc-customer-login renders with user logged in and not matched 1`] = `
<sc-customer-login>
  <div class="customer-login-area">
    <sc-customer-email-preview></sc-customer-email-preview>
    <sc-divider></sc-divider>
    <div>
      <p class="code-hint">
        Enter the code sent to
        <span class="reset-email-preview">
          test@example.com
        </span>
        to securely use your saved information.
      </p>
      <div>
        <div class="reset-code-area">
          <sc-verification-code total="6"></sc-verification-code>
          <div class="matched-icon"></div>
        </div>
      </div>
      <div class="resend-code-button">
        <sc-button type="text" style="color: var(--sc-color-primary-500);">
          Resend Code
        </sc-button>
      </div>
    </div>
    <div class="change-mode">
      <a href="#">
        Use Password
        <sc-icon name="lock"></sc-icon>
      </a>
    </div>
  </div>
</sc-customer-login>
`;

exports[`sc-customer-login renders with user not logged in and matched 1`] = `
<sc-customer-login>
  <div class="customer-login-area">
    <sc-customer-email-preview></sc-customer-email-preview>
    <sc-divider></sc-divider>
    <div>
      <p class="code-hint">
        Enter the code sent to
        <span class="reset-email-preview">
          test@example.com
        </span>
        to securely use your saved information.
      </p>
      <div>
        <div class="reset-code-area">
          <sc-verification-code total="6"></sc-verification-code>
          <div class="matched-icon"></div>
        </div>
      </div>
      <div class="resend-code-button">
        <sc-button type="text" style="color: var(--sc-color-primary-500);">
          Resend Code
        </sc-button>
      </div>
    </div>
    <div class="change-mode">
      <a href="#">
        Use Password
        <sc-icon name="lock"></sc-icon>
      </a>
    </div>
  </div>
</sc-customer-login>
`;
